# mec-proj-wk

sim/: CMakeLists.txt  package.xml
sim/include/sim/: open_manipulator_x_teleop.hpp
sim/launch/: base.launch.py  gazebo.launch.py  servo.launch.py
sim/src/: open_manipulator_x_teleop.cpp
sim/urdf/: open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
